--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -115,7 +115,8 @@
                 "email": "Email",
                 "registrationNumber": "Matriculation number",
                 "removeFromExam": {
-                    "modalQuestion": "Are you sure you want to unregister the student with login <strong>{{ title }}</strong> from this exam?"
+                    "modalQuestion": "Are you sure you want to unregister the student with login <strong>{{ title }}</strong> from this exam? His individual exam will be deleted.",
+                    "deleteParticipationsAndSubmission": "Also delete participations and submissions of this student in the associated student exam?"
                 },
                 "importStudents": {
                     "buttonLabel": "Import students",
