--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -116,7 +116,7 @@
                 "registrationNumber": "Matriculation number",
                 "removeFromExam": {
                     "modalQuestion": "Are you sure you want to unregister the student with login <strong>{{ title }}</strong> from this exam? His individual exam will be deleted.",
-                    "deleteParticipationsAndSubmission": "Also delete participations and submissions of this student in the associated student exam?"
+                    "deleteParticipationsAndSubmission": "Delete participations and submissions of this student in the associated exam?"
                 },
                 "importStudents": {
                     "buttonLabel": "Import students",
