--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -51,7 +51,7 @@
             "greeting": "Hello {{ fullName }}, welcome to \"{{ title }}\"",
             "points": "points",
             "saveSubmissionError": "Your changes could not be saved! Please make sure that you are online and try saving again.",
-            "pendingChanges": "All unsaved changes will be lost when leaving the exam! Are you sure to continue?"
+            "pendingChanges": "All unsaved changes will be lost when leaving the exam! Are you sure that you want to continue?"
         },
         "exerciseGroup": {
             "created": "New exercise group created",
