--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -33,8 +33,8 @@
         },
         "examParticipation": {
             "timer": "Time Left: ",
-            "connected": "Connected. Your answers will be saved every 60s.",
-            "ideConnected": "Connected.",
+            "connected": "Your answers will be saved every 30s.",
+            "ideConnected": "",
             "disconnected": "You are disconnected. Please check your Internet connection. You can continue working, but you need to be connected in order to save changes!",
             "disconnectedCodeEditorAndOfflineIDE": "You are disconnected. Please check your Internet connection. You can still work offline by cloning the repository.",
             "disconnectedCodeEditorNoOfflineIDE": "You are disconnected. Please reconnect in order to continue working in the online code editor.",
