Add exam to course overview (#1760)

--- a/src/main/webapp/i18n/en/student-dashboard.json
+++ b/src/main/webapp/i18n/en/student-dashboard.json
@@ -4,6 +4,7 @@
             "title": "Your current courses",
             "exerciseTitle": "Current active exercise of \"{{ course }}\"",
             "exerciseTitleWithoutDueDate": "Current exercise of \"{{ course }}\":",
+            "examTitle": "Current exam of \"{{ course }}\":",
             "cardTitle": "Your current score:",
             "cardNoExerciseLabel": "No exercise planned",
             "cardExerciseLabel": "Next Exercise:",
