--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -33,8 +33,8 @@
         },
         "examParticipation": {
             "timer": "Time Left: ",
-            "connected": "Connected. Your answers will be saved every 60s.",
-            "ideConnected": "Connected.",
+            "connected": "Your answers will be saved every 30s.",
+            "ideConnected": "",
             "disconnected": "You are disconnected. Please check your Internet connection. You can continue working, but you need to be connected in order to save changes!",
             "disconnectedCodeEditorAndOfflineIDE": "You are disconnected. Please check your Internet connection. You can still work offline by cloning the repository.",
             "disconnectedCodeEditorNoOfflineIDE": "You are disconnected. Please reconnect in order to continue working in the online code editor.",
@@ -49,7 +49,9 @@
             "submitOtherExercise": "Save & continue",
             "submitLastExercise": "Save",
             "greeting": "Hello {{ fullName }}, welcome to \"{{ title }}\"",
-            "points": "points"
+            "points": "points",
+            "saveSubmissionError": "Your changes could not be saved! Please make sure that you are online and try saving again.",
+            "pendingChanges": "All unsaved changes will be lost when leaving the exam! Are you sure that you want to continue?"
         },
         "exerciseGroup": {
             "created": "New exercise group created",
