[Exam] Evaluate (quiz) exercises by instructor. (#1756)

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -62,6 +62,7 @@
             "title": "Klausuren",
             "generateStudentExams": "Individuelle Klausuren erstellen",
             "startExercises": "Aufgabenstart vorbereiten",
+            "evaluateQuizExercises": "Quizzes auswerten",
             "searchForStudents": "Suche nach Studenten Logins oder Namen (Komma getrennt)",
             "student": "Student",
             "result": "Ergebnis",
@@ -74,7 +75,9 @@
             "studentExamGenerationSuccess": "{{number}} individuelle Klausuren erfolgreich generiert!",
             "studentExamGenerationError": "Es gab einen Fehler bei der Generierung der individuellen Klausuren:\n {{message}}",
             "startExerciseSuccess": "{{number}} Aufgaben erfolgreich vorbereitet!",
-            "startExerciseFailure": "Es gab einen Fehler bei der Vorbereitung der Aufgaben:\n {{message}}"
+            "startExerciseFailure": "Es gab einen Fehler bei der Vorbereitung der Aufgaben:\n {{message}}",
+            "evaluateQuizExerciseSuccess": "{{number}} Quiz-Aufgaben erfolgreich ausgewertet!",
+            "evaluateQuizExerciseFailure": "Es gab einen Fehler bei der Auswertung der Quiz-Aufgaben:\n {{message}}"
         },
         "examManagement": {
             "title": "Klausur Verwaltung",
