--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -63,6 +63,7 @@
             "generateStudentExams": "Generate individual exams",
             "generateMissingStudentExams": "Generate missing individual exams",
             "startExercises": "Prepare exercise start",
+            "evaluateQuizExercises": "Evaluate quizzes",
             "searchForStudents": "Search for students by login or name (comma separated)",
             "student": "Student",
             "workingTime": "Working time",
@@ -119,7 +120,8 @@
                 "email": "Email",
                 "registrationNumber": "Matriculation number",
                 "removeFromExam": {
-                    "modalQuestion": "Are you sure you want to unregister the student with login <strong>{{ title }}</strong> from this exam?"
+                    "modalQuestion": "Are you sure you want to unregister the student with login <strong>{{ title }}</strong> from this exam?",
+                    "deleteParticipationsAndSubmission": "Delete participations and submissions of this student in the associated exam?"
                 },
                 "importStudents": {
                     "buttonLabel": "Import students",
