--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -84,7 +84,7 @@
             "studentExamGenerationModalText": "Es existieren bereits individuelle Klausuren. Wenn Sie fortfahren werden diese Klausuren gelöscht und neue individuelle Klausuren generiert.",
             "studentExamStatusSuccess": "Alle registrierten Studenten haben eine Klausur",
             "studentExamStatusWarning": "Nicht alle registrierten Studenten haben eine Klausur",
-            "studentExamStatusWarningTooltip": "Klick auf den Button 'Fehlende individuelle Klausuren erstellen', um die fehlenden Klausuren zu generieren. Alternativ, klick auf den Button 'Individuelle Klausuren erstellen', um alle Klausuren zu löschen und neu zu generieren"
+            "studentExamStatusWarningTooltip": "Klicke auf den Button 'Fehlende individuelle Klausuren erstellen', um die fehlenden Klausuren zu generieren. Alternativ, klicke auf den Button 'Individuelle Klausuren erstellen', um alle Klausuren zu löschen und neu zu generieren"
         },
         "examManagement": {
             "title": "Klausur Verwaltung",
