--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -50,12 +50,12 @@
             "submitLastExercise": "Speichern",
             "greeting": "Hallo {{ fullName }}, willkommen zu \"{{ title }}\"",
             "points": "Punkte",
-            "synced": "Aufgabe ist mit dem Server synchronisiert",
-            "notSynced": "Aufgabe ist mit dem Server synchronisiert",
-            "syncedAndSubmitted": "Aufgabe ist mit dem Server synchronisiert und eingereicht",
-            "syncedAndNotSubmitted": "Aufgabe ist mit dem Server synchronisiert aber nicht eingereicht",
-            "notSyncedAndSubmitted": "Aufgabe ist nicht mit dem Server synchronisiert aber eingereicht",
-            "notSyncedAndNotSubmitted": "Aufgabe ist nicht mit dem Server synchronisiert und nicht eingereicht",
+            "synced": "Aufgabe gespeichert",
+            "notSynced": "Aufgabe nicht gespeichert",
+            "syncedAndSubmitted": "Aufgabe gespeichert und eingereicht",
+            "syncedAndNotSubmitted": "Aufgabe gespeichert aber nicht eingereicht",
+            "notSyncedAndSubmitted": "Aufgabe nicht gespeichert aber eingereicht",
+            "notSyncedAndNotSubmitted": "Aufgabe nicht gespeichert und nicht eingereicht",
             "saveSubmissionError": "Die Änderungen konnten nicht gespeichert werden! Bitte stelle sicher, dass du online bist und speichere nochmal.",
             "pendingChanges": "Alle ungespeicherten Änderungen gehen beim Verlassen der Klausur verloren. Bist du sicher, dass du fortfahren möchtest?"
         },
