--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -50,12 +50,12 @@
             "submitLastExercise": "Save",
             "greeting": "Hello {{ fullName }}, welcome to \"{{ title }}\"",
             "points": "points",
-            "synced": "Exercise is synchronised to the server",
-            "notSynced": "Exercise is not synchronised to the server",
-            "syncedAndSubmitted": "Exercise is synchronised to the server and submitted",
-            "syncedAndNotSubmitted": "Exercise is synchronised to the server but not submitted",
-            "notSyncedAndSubmitted": "Exercise is not synchronised to the server but submitted",
-            "notSyncedAndNotSubmitted": "Exercise is not synchronised to the server and not submitted",
+            "synced": "Exercise saved",
+            "notSynced": "Exercise not saved",
+            "syncedAndSubmitted": "Exercise saved and submitted",
+            "syncedAndNotSubmitted": "Exercise saved but not submitted",
+            "notSyncedAndSubmitted": "Exercise not saved but submitted",
+            "notSyncedAndNotSubmitted": "Exercise not saved and not submitted",
             "saveSubmissionError": "Your changes could not be saved! Please make sure that you are online and try saving again.",
             "pendingChanges": "All unsaved changes will be lost when leaving the exam! Are you sure that you want to continue?"
         },
