show trimmed hash with tooltip, or reload hint

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -9,7 +9,8 @@
             "examSummary": {
                 "yourSubmissionTo": "Deine Abgabe für {{examTitle}} ({{studentName}})",
                 "exportPDF": "Als PDF exportieren",
-                "lastCommitHash": "Hash des letzten Commits"
+                "lastCommitHash": "Hash des letzten Commits",
+                "noCommitHash": "Lade neu, um den Commit Hash zu sehen."
             },
             "title": "Klausur",
             "startExam": "Klausur starten",
