--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -9,7 +9,8 @@
             "examSummary": {
                 "yourSubmissionTo": "Your submission to {{examTitle}} ({{studentName}})",
                 "exportPDF": "Export PDF",
-                "lastCommitHash": "Last Commit Hash"
+                "lastCommitHash": "Last Commit Hash",
+                "noCommitHash": "Reload to get the commit hash."
             },
             "title": "Exam",
             "startExam": "Start Exam",
