Add/Import modeling Exercises (#1792)

--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -147,10 +147,11 @@
                     "question": "Are you sure you want to delete the exercise group <strong>{{ title }}</strong>? All associated exercises are also deleted.",
                     "typeNameToConfirm": "Please type in the name of the exercise group to confirm."
                 },
-                "addTextExercise": "Add text exercise",
-                "addQuizExercise": "Add quiz",
-                "addFileUploadExercise": "Add file upload exercise",
-                "addProgrammingExercise": "Add programming exercise",
+                "addTextExercise": "Add Text Exercise",
+                "addQuizExercise": "Add Quiz",
+                "addFileUploadExercise": "Add File Upload Exercise",
+                "addModelingExercise": "Add Modeling Exercise",
+                "addProgrammingExercise": "Add Programming Exercise",
                 "orderCouldNotBeSaved": "The order could not be saved"
             },
             "delete": {
