[Exam] Include last commit hash in exam summary (#1786)
Co-authored-by: Stephan Krusche <krusche@in.tum.de>
Co-authored-by: Jan Philip Bernius <janphilip.bernius@tum.de>

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -8,7 +8,9 @@
             },
             "examSummary": {
                 "yourSubmissionTo": "Deine Abgabe für {{examTitle}} ({{studentName}})",
-                "exportPDF": "Als PDF exportieren"
+                "exportPDF": "Als PDF exportieren",
+                "lastCommitHash": "Hash des letzten Commits",
+                "noCommitHash": "Lade neu, um den Commit Hash zu sehen."
             },
             "title": "Klausur",
             "startExam": "Klausur starten",
