small layout improvement

--- a/src/main/webapp/i18n/de/student-dashboard.json
+++ b/src/main/webapp/i18n/de/student-dashboard.json
@@ -39,8 +39,8 @@
                 "currentExerciseGroupHeader": "Aktuelle Übung aktiv bis {{ date }}:",
                 "currentExerciseGroupHeaderWithoutDueDate": "Aktuelle Übung:",
                 "sortExercises": "Aufgaben sortieren",
-                "newFirst": "Neueste zuerst",
-                "oldFirst": "Älteste zuerst",
+                "newFirst": "Neueste",
+                "oldFirst": "Älteste",
                 "noExercises": "Es gibt keine Aufgaben für diesen Kurs.",
                 "notReleased": "Nicht freigegeben",
                 "live": "Live",
