--- a/src/main/webapp/i18n/en/student-dashboard.json
+++ b/src/main/webapp/i18n/en/student-dashboard.json
@@ -39,8 +39,8 @@
                 "currentExerciseGroupHeader": "Current exercise active till {{ date }}:",
                 "currentExerciseGroupHeaderWithoutDueDate": "Current exercise:",
                 "sortExercises": "Sort exercises",
-                "newFirst": "Newest first",
-                "oldFirst": "Oldest first",
+                "newFirst": "Newest",
+                "oldFirst": "Oldest",
                 "noExercises": "No exercises available for the course.",
                 "notReleased": "Not released",
                 "live": "Live",
