--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -52,10 +52,8 @@
             "points": "points",
             "synced": "Exercise saved",
             "notSynced": "Exercise not saved",
-            "syncedAndSubmitted": "Exercise saved and submitted",
-            "syncedAndNotSubmitted": "Exercise saved but not submitted",
-            "notSyncedAndSubmitted": "Exercise not saved but submitted",
-            "notSyncedAndNotSubmitted": "Exercise not saved and not submitted",
+            "submitted": "Exercise submitted",
+            "notSubmitted": "Exercise not submitted",
             "saveSubmissionError": "Your changes could not be saved! Please make sure that you are online and try saving again.",
             "pendingChanges": "All unsaved changes will be lost when leaving the exam! Are you sure that you want to continue?"
         },
