--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -70,6 +70,10 @@
             "generateMissingStudentExams": "Generate missing individual exams",
             "startExercises": "Prepare exercise start",
             "evaluateQuizExercises": "Evaluate quizzes",
+            "unlockAllRepositories": "Unlock all repositories",
+            "lockAllRepositories": "Lock all repositories",
+            "unlockAllRepositoriesModalText": "All repositories will be immediately unlocked! Students will be able to clone & push even if the exam is not started yet!",
+            "lockAllRepositoriesModalText": "All repositories will be immediately locked! Students will be no longer be able to clone & push even if the exam is still running!\nThis will also affect students with extended working time!",
             "searchForStudents": "Search for students by login or name (comma separated)",
             "student": "Student",
             "workingTime": "Working time (mm:ss)",
@@ -90,7 +94,11 @@
             "studentExamStatusWarning": "Not all registered students have an individual exam",
             "studentExamStatusWarningTooltip": "Click on the button 'Generate missing individual exams' to create the missing student exams. Alternatively, click the button 'Generate individual exams' to delete and re-create exams for all students",
             "evaluateQuizExerciseSuccess": "{{number}} quiz exercises successfully evaluated!",
-            "evaluateQuizExerciseFailure": "There was an error during the evaluation of the quiz exercises:\n {{message}}"
+            "evaluateQuizExerciseFailure": "There was an error during the evaluation of the quiz exercises:\n {{message}}",
+            "unlockAllRepositoriesSuccess": "Repositories of {{number}} programming exercises were unlocked.",
+            "unlockAllRepositoriesFailure": "There was an error during the unlocking of the programming exercises:\n {{message}}",
+            "lockAllRepositoriesSuccess": "Repositories of {{number}} programming exercises were locked.",
+            "lockAllRepositoriesFailure": "There was an error during the locking of the programming exercises:\n {{message}}"
         },
         "examManagement": {
             "title": "Exam Management",
