--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -72,8 +72,8 @@
             "evaluateQuizExercises": "Quizzes auswerten",
             "unlockAllRepositories": "Alle Repositories entsperren",
             "lockAllRepositories": "Alle Repositories sperren",
-            "unlockAllRepositoriesModalText": "Alle Repositories werden sofort entsperrt! Studenten können sofort klonen & pushen, auch wenn die Klausur noch nicht gestartet wurde!",
-            "lockAllRepositoriesModalText": "Alle Repositories werden sofort gesperrt! Studenten werden nicht mehr klonen & pushen können, auch wenn die Klausur noch läuft!\nDies betrifft auch Studenten mit Nachteilsausgleich!",
+            "unlockAllRepositoriesModalText": "Alle Repositories werden sofort entsperrt! Studenten können sofort klonen & pushen, auch wenn die Klausur noch nicht gestartet wurde!\n\nDiese Operation wird automatisch mit dem Sichtbar-Setzen der Klausur ausgeführt und sollte daher nur genutzt werden, falls das automatische Entsperren nicht korrekt ausgeführt wurde!",
+            "lockAllRepositoriesModalText": "Alle Repositories werden sofort gesperrt! Studenten werden nicht mehr klonen & pushen können, auch wenn die Klausur noch läuft!\nDies betrifft auch Studenten mit Nachteilsausgleich!\n\nDie Operation wird automatisch mit dem Ende der Klausur ausgeführt und sollte daher nur genutzt werden, falls das automatische Sperren nicht korrekt ausgeführt wurde!",
             "searchForStudents": "Suche nach Studenten Logins oder Namen (Komma getrennt)",
             "student": "Student",
             "result": "Ergebnis",
