--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -72,8 +72,8 @@
             "evaluateQuizExercises": "Evaluate quizzes",
             "unlockAllRepositories": "Unlock all repositories",
             "lockAllRepositories": "Lock all repositories",
-            "unlockAllRepositoriesModalText": "All repositories will be immediately unlocked! Students will be able to clone & push even if the exam is not started yet!",
-            "lockAllRepositoriesModalText": "All repositories will be immediately locked! Students will be no longer be able to clone & push even if the exam is still running!\nThis will also affect students with extended working time!",
+            "unlockAllRepositoriesModalText": "All repositories will be immediately unlocked! Students will be able to clone & push even if the exam is not started yet!\n\nThis operation is automatically performed once the exam is set to visible, therefore this operation should only be used manually if the automatic unlock failed!",
+            "lockAllRepositoriesModalText": "All repositories will be immediately locked! Students will be no longer be able to clone & push even if the exam is still running!\nThis will also affect students with extended working time!\n\nThis operation is automatically performed once the exam is over, therefore this operation should only be used manually if the automatic lock failed!",
             "searchForStudents": "Search for students by login or name (comma separated)",
             "student": "Student",
             "workingTime": "Working time (mm:ss)",
