fix some issues in the summary and in student details view
mostly type script errors
programming summary does not need a submission
added some additional checks in case the submission is not available

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -75,6 +75,7 @@
             "student": "Student",
             "result": "Ergebnis",
             "workingTime": "Bearbeitungszeit (mm:ss)",
+            "summary": "Zusammenfassung für den Studierenden",
             "created": "Erstellt",
             "view": "Ansicht",
             "assessment": "Bewertung",
