--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -74,6 +74,7 @@
             "searchForStudents": "Search for students by login or name (comma separated)",
             "student": "Student",
             "workingTime": "Working time (mm:ss)",
+            "summary": "Student Summary",
             "result": "Result",
             "created": "Created",
             "view": "View",
