--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -70,6 +70,10 @@
             "generateStudentMissingExams": "Fehlende individuelle Klausuren erstellen",
             "startExercises": "Aufgabenstart vorbereiten",
             "evaluateQuizExercises": "Quizzes auswerten",
+            "unlockAllRepositories": "Alle Repositories entsperren",
+            "lockAllRepositories": "Alle Repositories sperren",
+            "unlockAllRepositoriesModalText": "Alle Repositories werden sofort entsperrt! Studenten können sofort klonen & pushen, auch wenn die Klausur noch nicht gestartet wurde!\n\nDiese Operation wird automatisch mit dem Sichtbar-Setzen der Klausur ausgeführt und sollte daher nur genutzt werden, falls das automatische Entsperren nicht korrekt ausgeführt wurde!",
+            "lockAllRepositoriesModalText": "Alle Repositories werden sofort gesperrt! Studenten werden nicht mehr pushen können, auch wenn die Klausur noch läuft!\nDies betrifft auch Studenten mit Nachteilsausgleich!\n\nDie Operation wird automatisch mit dem Ende der Klausur ausgeführt und sollte daher nur genutzt werden, falls das automatische Sperren nicht korrekt ausgeführt wurde!",
             "searchForStudents": "Suche nach Studenten Logins oder Namen (Komma getrennt)",
             "student": "Student",
             "result": "Ergebnis",
@@ -90,7 +94,11 @@
             "studentExamGenerationModalText": "Es existieren bereits individuelle Klausuren. Wenn Sie fortfahren werden diese Klausuren gelöscht und neue individuelle Klausuren generiert.",
             "studentExamStatusSuccess": "Alle registrierten Studenten haben eine Klausur",
             "studentExamStatusWarning": "Nicht alle registrierten Studenten haben eine Klausur",
-            "studentExamStatusWarningTooltip": "Klicke auf den Button 'Fehlende individuelle Klausuren erstellen', um die fehlenden Klausuren zu generieren. Alternativ, klicke auf den Button 'Individuelle Klausuren erstellen', um alle Klausuren zu löschen und neu zu generieren"
+            "studentExamStatusWarningTooltip": "Klicke auf den Button 'Fehlende individuelle Klausuren erstellen', um die fehlenden Klausuren zu generieren. Alternativ, klicke auf den Button 'Individuelle Klausuren erstellen', um alle Klausuren zu löschen und neu zu generieren",
+            "unlockAllRepositoriesSuccess": "Repositories von {{number}} Programmieraufgaben wurden entsperrt.",
+            "unlockAllRepositoriesFailure": "Es gab einen Fehler beim Entsperren der Repositories:\n {{message}}",
+            "lockAllRepositoriesSuccess": "Repositories von {{number}} Programmieraufgaben wurden gesperrt.",
+            "lockAllRepositoriesFailure": "Es gab einen Fehler beim Sperren der Repositories:\n {{message}}"
         },
         "examManagement": {
             "title": "Klausur Verwaltung",
