Apply requested changes

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -39,7 +39,7 @@
             "titleColumn": "Titel",
             "containedExercisesColumn": "Aufgaben in Gruppe",
             "averagePointsColumn": "Durchschnittlich erreichte Punkte",
-            "maximumPointsColumn": "Maximal Erreichbare Punkte",
+            "maximumPointsColumn": "Maximal erreichbare Punkte",
             "nameColumn": "Name",
             "loginColumn": "Login",
             "eMailColumn": "E-Mail",
