--- a/src/main/webapp/i18n/en/modelingExercise.json
+++ b/src/main/webapp/i18n/en/modelingExercise.json
@@ -18,7 +18,7 @@
             "exampleSolution": "Example Solution",
             "exampleSolutionExplanation": "Example Solution Explanation",
             "createExampleSolution": "Create Example Solution",
-            "exampleSolutionRequiresExercise": "To create an example solution, you first need to finish creating the text exercise.",
+            "exampleSolutionRequiresExercise": "To create an example solution, you first need to finish creating the modeling exercise.",
             "exampleSolutionForModelingExercise": "Example Solution for Modeling Exercise {{ exerciseTitle }}",
             "saveExampleSolution": "Save Example Solution",
             "exampleSubmission": "Example Submission {{ number }}",
@@ -29,7 +29,7 @@
             "saveExampleAssessment": "Save Example Assessment",
             "showExampleSubmission": "Show Submission",
             "showExampleAssessment": "Show Assessment",
-            "exampleSubmissionsRequireExercise": "To create an example submission, you first need to finish creating the text exercise.",
+            "exampleSubmissionsRequireExercise": "To create an example submission, you first need to finish creating the modeling exercise.",
             "exampleSubmissionForModelingExercise": "Example Submission for Modeling Exercise {{ exerciseTitle }}",
             "usedForTutorial": "Used for Tutorial"
         }
