--- a/src/main/webapp/i18n/de/editor.json
+++ b/src/main/webapp/i18n/de/editor.json
@@ -85,7 +85,8 @@
                 "problemStatementCouldNotBeUpdated": "Die Aufgabenstellung der Übung konnte nicht aktualisiert werden.",
                 "failedToLoadBuildLogs": "Die Build Logs konnten nicht geladen werden.",
                 "repositoryInConflict": "Dein Repository befindet sich in einem Konfliktzustand.",
-                "notAllowedExam": "Du kannst (nicht mehr) abgeben"
+                "notAllowedExam": "Du kannst (nicht mehr) abgeben",
+                "connectionTimeout": "Zeitlimit überschritten. Speichern ist fehlgeschlagen."
             },
             "testStatusLabels": {
                 "noResult": "Keine Ergebnisse",
