--- a/src/main/webapp/i18n/en/editor.json
+++ b/src/main/webapp/i18n/en/editor.json
@@ -89,7 +89,9 @@
                 "problemStatementCouldNotBeUpdated": "The problem statement of this exercise could not be updated.",
                 "failedToLoadBuildLogs": "The build logs could not be retrieved.",
                 "repositoryInConflict": "Your repository has entered a conflict state.",
-                "notAllowedExam": "You must not submit (anymore)"
+                "notAllowedExam": "You must not submit (anymore)",
+                "connectionTimeoutSave": "Saving failed. Please make sure you have a stable internet connection and try again.",
+                "connectionTimeoutRefresh": "Refreshing failed. Please make sure you have a stable internet connection and try again."
             },
             "testStatusLabels": {
                 "noResult": "No results",
