--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -128,6 +128,9 @@
             "visibleDate": "Sichtbar ab",
             "startDate": "Bearbeitungszeit ab",
             "endDate": "Bearbeitungszeit bis",
+            "publishResultsDate": "Veröffentlichung der Ergebnisse",
+            "examStudentReviewStart": "Beginn der Klausureinsicht",
+            "examStudentReviewEnd: ": "Ende der Klausureinsicht",
             "maxPoints": "Anzahl an erreichbaren Punkten",
             "numberOfExercisesInExam": "Anzahl an Aufgaben in der Klausur",
             "randomizeQuestionOrder": "Zufällige Reihenfolge der Aufgabengruppen",
