Added dates to exam management overview

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -19,6 +19,9 @@
             "visible": "Sichtbar",
             "startDate": "Beginn",
             "endDate": "Ende",
+            "publishResultsDate": "Ergebnis-Veröffentlichungsdatum",
+            "examStudentReviewStart": "Beginn der Klausureinsicht",
+            "examStudentReviewEnd": "Ende der Klausureinsicht",
             "duration": "Dauer",
             "nrOfStudents": "Anzahl der registrierten Studenten",
             "created": "Neue Klausur erstellt",
