--- a/src/main/webapp/i18n/en/exam.json
+++ b/src/main/webapp/i18n/en/exam.json
@@ -19,6 +19,9 @@
             "visible": "Visible",
             "startDate": "Start Date",
             "endDate": "End Date",
+            "publishResultsDate": "Release Date of Results",
+            "examStudentReviewStart": "Begin of Student Review",
+            "examStudentReviewEnd": "End of Student Review",
             "duration": "Duration",
             "nrOfStudents": "Registered Students",
             "created": "New exam created",
