--- a/src/main/webapp/i18n/de/instructorDashboard.json
+++ b/src/main/webapp/i18n/de/instructorDashboard.json
@@ -34,7 +34,13 @@
             "timeWarning": "<b>Achtung:</b> Diese Aktion kann abhängig von Größe und Anzahl der Repositories mehrere Minuten dauern."
         },
         "exportCSV": "Als CSV exportieren",
-        "exportSubmissions": "Abgaben exportieren",
+        "exportSubmissions": {
+            "title": "Abgaben exportieren",
+            "downloadAllStudents": "Oder lade die Abgaben aller Studenten herunter",
+            "question": "Tragen sie hier alle Kennungen der Studenten ein, die heruntergeladen werden sollen getrennt durch ein Komma (z.B. ga87fix,ga63dut)",
+            "filterLateSubmissions": "Verspätete Abgaben herausfiltern",
+            "filterLateSubmissionsDate": "Datum zum Filtern verspäteter Abgaben (standardmäßig Einreichungsfrist der Aufgabe)"
+        },
         "loadingStudents": "Lade die Ergebnisse aller Studenten..."
     }
 }
