--- a/src/main/webapp/i18n/en/instructorDashboard.json
+++ b/src/main/webapp/i18n/en/instructorDashboard.json
@@ -34,7 +34,13 @@
             "timeWarning": "<b>Caution:</b> This action can take several minutes depending on number and size of repositories."
         },
         "exportCSV": "Export as CSV",
-        "exportSubmissions": "Export Submissions",
+        "exportSubmissions": {
+            "title": "Export Submissions",
+            "downloadAllStudents": "Or download the submissions of all students",
+            "question": "Enter all logins seperated by ',' (e.g ga87fix,ga63dut) of students you want to download the submission from",
+            "filterLateSubmissions": "Filter late submissions",
+            "filterLateSubmissionsDate": "Date for filter late submissions (defaults to exercise due date if not set)"
+        },
         "loadingStudents": "Loading the results of all students..."
     }
 }
