--- a/src/main/webapp/i18n/en/instructorDashboard.json
+++ b/src/main/webapp/i18n/en/instructorDashboard.json
@@ -39,7 +39,8 @@
             "downloadAllStudents": "Or download the submissions of all students",
             "question": "Enter all logins seperated by ',' (e.g ga87fix,ga63dut) of students you want to download the submission from",
             "filterLateSubmissions": "Filter late submissions",
-            "filterLateSubmissionsDate": "Date for filter late submissions (defaults to exercise due date if not set)"
+            "filterLateSubmissionsDate": "Date for filter late submissions (defaults to exercise due date if not set)",
+            "successMessage": "Export of submissions was successful. The exported zip file is currently being downloaded."
         },
         "loadingStudents": "Loading the results of all students..."
     }
