--- a/src/main/webapp/i18n/en/assessment.json
+++ b/src/main/webapp/i18n/en/assessment.json
@@ -10,7 +10,7 @@
                 "assessmentDueDateOver": "The assessment due date of this exercise is over."
             },
             "assessmentLocked": "Assessment locked by: {{otherUser}}",
-            "firstCorrectionBy": "First correction by: {{otherUser}}",
+            "firstCorrectionBy": "Last corrected by: {{otherUser}}",
             "assessmentLockedComplaintView": "Original Assessor: {{otherUser}}",
             "assessmentLockedCurrentUser": "You have the lock for this assessment",
             "button": {
