add exam end confirmation page

--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -15,6 +15,7 @@
             },
             "title": "Klausur",
             "startExam": "Klausur starten",
+            "endExam": "Klausur beenden",
             "summary": "Zusammenfassung",
             "visible": "Sichtbar",
             "startDate": "Beginn",
@@ -24,7 +25,8 @@
             "created": "Neue Klausur erstellt",
             "updated": "Klausur bearbeitet",
             "exercise": "Aufgabe {{nr}}",
-            "consentText": "Hiermit bestätige ich mit meinem vollen Namen stellvertretend für meine Unterschrift, dass ich die Teilnahmebedingungen gelesen habe und diese für die Dauer der Klausur einhalten werde.",
+            "startConsentText": "Hiermit bestätige ich mit meinem vollen Namen stellvertretend für meine Unterschrift, dass ich die Teilnahmebedingungen gelesen habe und diese für die Dauer der Klausur einhalten werde.",
+            "endConsentText": "Hiermit bestätige ich mit meinem vollen Namen stellvertretend für meine Unterschrift, dass ich die Klausur eigenständig und nur mithilfe der angegebene Hilfsmittel bearbeitet habe.",
             "falseName": "Der angegebene Name ist nicht korrekt. Bitte versuche es erneut!",
             "validation": {
                 "startAndEndMustBeSet": "Start- und Enddatum der Klausur müssen festgelegt werden.",
