--- a/src/main/webapp/i18n/de/tutorExerciseDashboard.json
+++ b/src/main/webapp/i18n/de/tutorExerciseDashboard.json
@@ -34,6 +34,7 @@
             "assessor": "Korrektor",
             "status": "Status",
             "score": "Ergebnis",
+            "assessedTwice": "Zweitkorrektur",
             "action": "Aktion",
             "continueAssessment": "Bewertung fortsetzen",
             "openAssessment": "Bewertung öffnen",
