--- a/src/main/webapp/i18n/en/tutorExerciseDashboard.json
+++ b/src/main/webapp/i18n/en/tutorExerciseDashboard.json
@@ -34,6 +34,7 @@
             "assessor": "Corrector",
             "status": "Status",
             "score": "Score",
+            "assessedTwice": "Assessed Twice",
             "action": "Action",
             "continueAssessment": "Continue assessment",
             "openAssessment": "Open assessment",
