--- a/src/main/webapp/i18n/de/exam.json
+++ b/src/main/webapp/i18n/de/exam.json
@@ -19,7 +19,7 @@
             "visible": "Sichtbar",
             "startDate": "Beginn",
             "endDate": "Ende",
-            "publishResultsDate": "Ergebnis-Veröffentlichungsdatum",
+            "publishResultsDate": "Veröffentlichung der Ergebnisse",
             "examStudentReviewStart": "Beginn der Klausureinsicht",
             "examStudentReviewEnd": "Ende der Klausureinsicht",
             "duration": "Dauer",
